wsdf/tests/should_fail/invalid_len_field.stderr
error[E0605]: non-primitive cast: `()` as `usize`
 --> tests/should_fail/repeat_based_on_vector.rs:7:17
  |
7 | #[derive(Proto, Dissect)]
  |                 ^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object
  |
  = note: this error originates in the derive macro `Dissect` (in Nightly builds, run with -Z macro-backtrace for more info)
